--- a/other__styles/scss/content.scss
+++ b/other__styles/scss/content.scss
@@ -7,12 +7,17 @@
     &__title{
         display: flex;
 
+        @media(max-width: $md3+px){
+            align-items: center;
+            flex-direction: column;
+        }
+
         &--block{
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-            width: 190px;
-            height: 190px;
+            @include adaptiv-value('width',190,170,1);
+            @include adaptiv-value('height',190,170,1);
             border: 3px solid #aaaaaa;
             padding: 30px 24px;
             margin: 0px 0px -3px 0px;
@@ -96,11 +101,16 @@
         &--text{
             max-width: 430px;
             margin: 20px 0px 0px 73px;
-            font-size: 32px;
+            @include adaptiv-value('font-size',32,22,1);
             line-height: 39px;
             color: #444444;
             transform: translateX(250px);
             opacity: 0;
+
+            @media(max-width: $md3+px){
+                text-align: center;
+                margin: 45px 0px 45px 0px;
+            }
         }
     }
 
@@ -113,10 +123,18 @@
             opacity: 0;
             p{
                 font-family: $font-family-MontserratSemiBold;
-                font-size: 18px;
+                @include adaptiv-value('font-size',18,15,1);
                 line-height: 22px;
                 color: #404040;
                 margin-block-start: 0;
+            }
+
+            @media(max-width: $md2+px){
+                padding: 75px 50px 53px 50px;
+            }
+
+            @media(max-width: $md3+px){
+                padding: 50px 30px 70px 30px;
             }
         }
 
@@ -134,6 +152,10 @@
                 &:nth-last-child(2){
                     margin-block-end: 10px;
                 }
+            }
+
+            @media(max-width: $md2+px){
+                padding: 100px 0px 10px 0px;
             }
         }
     }
