--- a/service_styles/scss/footer.scss
+++ b/service_styles/scss/footer.scss
@@ -10,8 +10,11 @@
         display: flex;
         align-items: center;
         flex-direction: column;
-        padding: 65px 0px 160px 0px;
-        border-top: 3px solid #CCCCCC;
+        padding: 80px 0px 160px 0px;
+
+        @media(min-width: $md2+px){
+            border-top: 3px solid #CCCCCC;
+        }
     }
 
     &__title{
@@ -32,10 +35,6 @@
             color: #444444;
             text-align: center;
             line-height: 16px;
-        }
-
-        &--info{
-            
         }
     }
 
@@ -63,8 +62,13 @@
     }
 
     &__mail{
-        transform: translateY(200px);
+        transform: translateY(80px);
         opacity: 0;
+
+        @media(max-width: $md2+px){
+            transform: translateY(0px)!important;
+            opacity: 1!important;
+        }
         &--img{
             display: flex;
             margin: 0px 0px 20px 0px;
@@ -91,13 +95,21 @@
     }
 
     &__telephone{
-        transform: translateY(-200px);
+        transform: translateY(-80px);
         opacity: 0;
+        @media(max-width: $md2+px){
+            transform: translateY(0px)!important;
+            opacity: 1!important;
+        }
     }
 
     &__skype{
-        transform: translateY(200px);
+        transform: translateY(80px);
         opacity: 0;
+        @media(max-width: $md2+px){
+            transform: translateY(0px)!important;
+            opacity: 1!important;
+        }
     }
 
     &__links{
@@ -141,26 +153,36 @@
                 }
             }
 
-            &--transform{
-                border: 3px solid #CCCCCC;
-                transform: translateY(-130%);
-                opacity: 0;
-                margin: 0px -1px -3px -2px;;
-            }
-
             &--instagram{
-                transform: translateY(50px);
-                opacity: 0;
+                @media(min-width: $md2+px){
+                    transform: translateY(50px);
+                    opacity: 0;
+                }
             }
 
             &--facebook{
-                transform: translateY(50px);
-                opacity: 0;
+                @media(min-width: $md2+px){
+                    transform: translateY(50px);
+                    opacity: 0;
+                }
             }
 
             &--facebook2{
-                transform: translateY(50px);
+                @media(min-width: $md2+px){
+                    transform: translateY(50px);
+                    opacity: 0;
+                }
+            }
+
+            &--transform{
+                border: 3px solid #CCCCCC;
+                transform: translateY(-100%)!important;
                 opacity: 0;
+                @media(min-width: $md2+px){
+                    transform: translateY(-130%);
+                    opacity: 1!important;
+                }
+                margin: 0px -1px -3px -2px;;
             }
 
             &--img{
@@ -199,6 +221,7 @@
     &__copyright{
         font-size: 20px;
         color: #444444;
+        text-align: center;
         p{
             margin: 0;
         }
