--- a/service_styles/scss/footer.scss
+++ b/service_styles/scss/footer.scss
@@ -176,11 +176,11 @@
 
             &--transform{
                 border: 3px solid #CCCCCC;
-                transform: translateY(-100%)!important;
-                opacity: 0;
+                transform: translateY(-100%);
+                opacity: 1;
                 @media(min-width: $md2+px){
                     transform: translateY(-130%);
-                    opacity: 1!important;
+                    opacity: 0;
                 }
                 margin: 0px -1px -3px -2px;;
             }
