--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: Parisienne;
-  src: url(../../fonts/Parisienne-Regular.ttf);
+  src: url(../../fonts//Parisienne-Regular.ttf);
   font-display: swap;
 }
 @font-face {
@@ -414,14 +414,12 @@ body.lock {
   top: 0;
   right: -40%;
   width: 335px;
-  height: 0;
+  height: 0px;
   background: linear-gradient(195.03deg, #4D4D51 -6.72%, #26272C 136.1%);
   -webkit-transform-origin: top;
           transform-origin: top;
   -webkit-transition: opacity 0.3s ease, height 0.6s ease, visibility 0.6s ease;
   transition: opacity 0.3s ease, height 0.6s ease, visibility 0.6s ease;
-  -webkit-transition: 0.3s ease;
-  transition: 0.3s ease;
   margin: 0px 20px 0px 0px;
 }
 @media (min-width: 479.98px) {
@@ -452,6 +450,8 @@ body.lock {
       -ms-flex-direction: column;
           flex-direction: column;
   height: 100%;
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
 }
 @media (min-width: 479.98px) {
   .header__burger--menu--inner {
@@ -572,13 +572,18 @@ body.lock {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  width: 28px;
+  width: 30px;
   height: 30px;
   -webkit-transition: 0.3s ease;
   transition: 0.3s ease;
 }
-.header__burger--social--link svg {
-  width: 150%;
+.header__burger--social--link img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+  -o-object-position: center;
+     object-position: center;
 }
 @media (any-hover: hover) {
   .header__burger--social--link:hover {
@@ -2896,6 +2901,12 @@ body.lock {
 }
 .blog__title--see p {
   margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 5px;
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
 }
 .blog__body {
   display: -webkit-box;
@@ -3002,6 +3013,96 @@ body.lock {
 .blog__body--item--date img {
   width: 14px;
   height: 14px;
+}
+
+.modal {
+  z-index: 10000000000000;
+}
+.modal__video {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(68, 68, 68, 0.5);
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
+  -webkit-transform: scale(0);
+          transform: scale(0);
+}
+.modal__video--body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+.modal__video iframe {
+  width: 90%;
+  height: 50%;
+}
+@media (min-width: 991.98px) {
+  .modal__video iframe {
+    width: 700px;
+    height: 400px;
+  }
+}
+.modal__video.active {
+  -webkit-transform: scale(1);
+          transform: scale(1);
+}
+.modal__video--close {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  right: 60px;
+  top: 60px;
+  cursor: pointer;
+}
+@media (any-hover: hover) {
+  .modal__video--close:hover::after {
+    background-color: white;
+  }
+  .modal__video--close:hover::before {
+    background-color: white;
+  }
+}
+.modal__video--close::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  left: 0;
+  width: 50px;
+  height: 2px;
+  background-color: rgba(255, 255, 255, 0.7);
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
+}
+.modal__video--close::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  left: 0;
+  width: 50px;
+  height: 2px;
+  background-color: rgba(255, 255, 255, 0.7);
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
 }
 
 .footer {
@@ -3224,16 +3325,16 @@ body.lock {
 }
 .footer__links--item--transform {
   border: 3px solid #CCCCCC;
-  -webkit-transform: translateY(-100%) !important;
-          transform: translateY(-100%) !important;
-  opacity: 0;
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
+  opacity: 1;
   margin: 0px -1px -3px -2px;
 }
 @media (min-width: 991.98px) {
   .footer__links--item--transform {
     -webkit-transform: translateY(-130%);
             transform: translateY(-130%);
-    opacity: 1 !important;
+    opacity: 0;
   }
 }
 .footer__links--item--img {
@@ -3246,16 +3347,16 @@ body.lock {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  width: 100%;
-  height: 100%;
-}
-.footer__links--item--img svg {
   width: 50%;
   height: 50%;
 }
-.footer__links--item--img svg path {
-  -webkit-transition: 0.3s ease;
-  transition: 0.3s ease;
+.footer__links--item--img img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+  -o-object-position: center;
+     object-position: center;
 }
 @media (any-hover: hover) {
   .footer__links--item:hover .footer__links--item--img svg path {
