--- a/styles/scss/content.scss
+++ b/styles/scss/content.scss
@@ -1730,6 +1730,9 @@ $color: #555;
 
             p{
                 margin: 0;
+                display: flex;
+                gap: 5px;
+                text-decoration-line: underline;
             }
         }
     }
@@ -1802,6 +1805,91 @@ $color: #555;
                     width: 14px;
                     height: 14px;
                 }
+            }
+        }
+    }
+}
+
+
+// Модальные окна //
+
+.modal{
+    z-index: 10000000000000;
+    &__video{
+        position: fixed;
+        width: 100%;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(68, 68, 68, 0.5);
+        transition: .3s ease;
+        transform: scale(0);
+
+        &--body{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            height: 100%;
+        }
+
+        iframe{
+            @media(min-width: $md2+px){
+                width: 700px;
+                height: 400px;
+            }
+            width: 90%;
+            height: 50%;
+        }
+
+        &.active{
+            transform: scale(1);
+        }
+
+
+        &--close{
+            position: absolute;
+            width: 50px;
+            height: 50px;
+            right: 60px;
+            top: 60px;
+            cursor: pointer;
+            @media(any-hover:hover){ 
+                &:hover{
+                    &::after{
+                        background-color: rgba(255, 255, 255, 1); 
+                    }
+
+                    &::before{
+                        background-color: rgba(255, 255, 255, 1); 
+                    }
+                }
+            }
+            &::after{
+                content: '';
+                position: absolute;
+                top: 50%;
+                transform: translateX(-50%);
+                left: 0;
+                width: 50px;
+                height: 2px;
+                background-color: rgba(255, 255, 255, 0.7); 
+                transform: rotate(45deg);
+                transition: .3s ease;
+            }
+    
+            &::before{
+                content: '';
+                position: absolute;
+                top: 50%;
+                transform: translateX(-50%);
+                left: 0;
+                width: 50px;
+                height: 2px;
+                background-color: rgba(255, 255, 255, 0.7);  
+                transform: rotate(-45deg);
+                transition: .3s ease;
             }
         }
     }
