--- a/styles/scss/footer.scss
+++ b/styles/scss/footer.scss
@@ -159,11 +159,11 @@
 
             &--transform{
                 border: 3px solid #CCCCCC;
-                transform: translateY(-100%)!important;
-                opacity: 0;
+                transform: translateY(-100%);
+                opacity: 1;
                 @media(min-width: $md2+px){
                     transform: translateY(-130%);
-                    opacity: 1!important;
+                    opacity: 0;
                 }
                 margin: 0px -1px -3px -2px;;
             }
@@ -172,15 +172,14 @@
                 display: flex;
                 align-items: center;
                 justify-content: center;
-                width: 100%;
-                height: 100%;
+                width: 50%;
+                height: 50%;
 
-                svg{
-                    width: 50%;
-                    height: 50%;
-                    path{
-                        transition: .3s ease;
-                    }
+                img{
+                    width: 100%;
+                    height: 100%;
+                    object-fit: contain;
+                    object-position: center;
                 }
 
             }
