--- a/other__styles/scss/content.scss
+++ b/other__styles/scss/content.scss
@@ -1,3 +1,44 @@
+// Анимация //
+
+.path-line-preloader{
+    animation-timing-function: linear;
+    animation-fill-mode: forwards;
+    animation-name: line;
+    animation-duration: 1.5s;
+    animation-delay: 0s;
+    stroke-dasharray: 400;
+    stroke-dashoffset: 400;
+
+    @keyframes line {
+
+        100%{
+            stroke-dashoffset: 0;
+        }
+        
+    }
+
+    &-arrow{
+        animation-timing-function: linear;
+        animation-fill-mode: forwards;
+        animation-name: line-arrow;
+        animation-duration: 1.5s;
+        animation-delay: 0s;
+        stroke-dasharray: 400;
+        stroke-dashoffset: 400;
+
+        @keyframes line-arrow {
+
+            100%{
+                stroke-dashoffset: 0;
+                fill: #1FFF83;
+            }
+        
+        }
+    }
+}
+
+// Конец Анимаций //
+
 .content{
     flex: 1;
 }
@@ -104,7 +145,7 @@
             @include adaptiv-value('font-size',32,22,1);
             line-height: 39px;
             color: #444444;
-            transform: translateX(250px);
+            transform: translateY(100px);
             opacity: 0;
 
             @media(max-width: $md3+px){
