--- a/other__styles/scss/style.scss
+++ b/other__styles/scss/style.scss
@@ -84,6 +84,111 @@ body{
     flex-direction: column;
 }
 
+.preloader{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: #202020;
+    z-index: 10000000000;
+
+    &__body{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+    }
+
+    &__inner{
+        display: flex;
+        position: relative;
+        width: 300px;
+        height: 300px;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        border-radius: 50%;
+        padding: 30px;
+
+        @media(max-width: $mp1+px){
+            width: 230px;
+            height: 230px;
+        }
+
+        img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: center;
+            image-rendering: optimizeQuality;
+        }
+
+        p{
+            color: #ffce3c;
+            font-family: $font-family-MontserratBlack;
+            @include adaptiv-value('font-size',35,20,1);
+            text-align: center;
+            letter-spacing: 10px;
+            color: #ffce3c;
+            margin: 5px 0px 0px 0px;
+        }
+    }
+
+    &__img{
+        display: flex;
+        width: 100%;
+
+        &--arrow{
+            width: 70%;
+            transform: translateX(20%);
+        }
+
+        &--mountain{
+            width: 100%;
+            transform: translateX(-20%);
+        }
+    }
+
+    h2{
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        animation: rotation 10s infinite linear;
+        span{
+            font: 26px Monaco, MonoSpace;
+            height: 180px;
+            position: absolute;
+            width: 20px;
+            right: 47%;
+            bottom: 50%;
+            transform-origin: bottom center;
+            text-transform: uppercase;
+            color: #ffce3c;
+            @media(max-width: $mp1+px){
+                font: 22px Monaco, MonoSpace;
+                right: 46%;
+                height: 140px;
+            }
+        }
+
+        @for $i from 1 through 100 {
+            span:nth-child(#{$i}) {
+            transform: rotate($i*8+deg);
+            }
+        }
+    }
+}
+
+.loaded_hiding .preloader {
+    transition: 0.3s opacity;
+    opacity: 0;
+}
+  
+.loaded .preloader {
+    display: none;
+}
+
 .container{
     max-width: $maxWidthContainer + px;
     padding: 0 15px;
@@ -97,6 +202,19 @@ body{
 @import "content.scss";
 @import "footer.scss";
 @import "help.scss";
+
+// Анимация // 
+
+@keyframes rotation {
+    from{
+        transform: rotate(0deg);
+    }
+
+    to{
+        transform: rotate(360deg);
+    }
+    
+}
 
 
 
