--- a/service_styles/scss/content.scss
+++ b/service_styles/scss/content.scss
@@ -1,3 +1,44 @@
+// Анимация //
+
+.path-line-preloader{
+    animation-timing-function: linear;
+    animation-fill-mode: forwards;
+    animation-name: line;
+    animation-duration: 1.5s;
+    animation-delay: 0s;
+    stroke-dasharray: 400;
+    stroke-dashoffset: 400;
+
+    @keyframes line {
+
+        100%{
+            stroke-dashoffset: 0;
+        }
+        
+    }
+
+    &-arrow{
+        animation-timing-function: linear;
+        animation-fill-mode: forwards;
+        animation-name: line-arrow;
+        animation-duration: 1.5s;
+        animation-delay: 0s;
+        stroke-dasharray: 400;
+        stroke-dashoffset: 400;
+
+        @keyframes line-arrow {
+
+            100%{
+                stroke-dashoffset: 0;
+                fill: #1FFF83;
+            }
+        
+        }
+    }
+}
+
+// Конец Анимаций //
+
 .content{
     flex: 1;
 }
@@ -170,7 +211,7 @@
             @include adaptiv-value('font-size',32,20,1);
             line-height: 39px;
             color: #444444;
-            transform: translateX(250px);
+            transform: translateY(100px);
             opacity: 0;
         }
     }
@@ -182,8 +223,6 @@
             @media(max-width: $maxWidthContainer+px){
                 justify-content: center;
             }
-            gap: 17px;
-            row-gap: 17px;
             flex-wrap: wrap;
             padding: 75px 0px 160px 0px;
             min-height: 535px;
@@ -198,11 +237,21 @@
             flex: 0 1 355px;
             background-color: #444444;
             cursor: pointer;
+            margin: 0px 11px 17px 0px;
             transition: .3s ease;
+
+            &.hide{
+                margin: 0;
+            }
+
             @media(any-hover:hover){ 
                 &:hover{
                     .service__body--item--img{
                         opacity: .6;
+                    }
+
+                    .service__body--item--info{
+                        opacity: 1;
                     }
                 }
             }
@@ -215,12 +264,25 @@
             
             &--info{
                 display: flex;
+                align-items: center;
+                justify-content: center;
                 flex-direction: column;
                 position: absolute;
                 top: 0;
                 left: 0;
                 width: 100%;
                 height: 100%;
+                opacity: 0;
+                transition: .3s ease;
+                color: #fff;
+                font-size: 18px;
+                font-family: $font-family-MontserratMedium;
+
+                p{
+                    text-align: center;
+                    max-width: 150px;
+                    word-wrap: break-word;
+                }
             }
         }
     }
