--- a/service_styles/scss/header.scss
+++ b/service_styles/scss/header.scss
@@ -10,11 +10,12 @@
         justify-content: space-between;
         @include adaptiv-value('padding-top',48,20,1);
         @include adaptiv-value('padding-bottom',48,20,1);
-        padding-left: 3px;
-        padding-right: 16px;
+        padding-left: 18px;
+        padding-right: 31px;
         pointer-events: none;
+        min-height: 60px;
         @media(min-width: $md2+px){
-            padding: 48px 0px;
+            padding: 48px 30px;
         }
     }
 
@@ -25,11 +26,19 @@
             background-image: none!important;
         }
         @media(min-width: $md2+px){
-            flex: 0 1 113px / 1130px * 100%;
+            flex: 0 1 113px / 1920px * 100%;
         }
         img{
-            width: 90%;
-            height: 90%;
+            width: 100%;
+            height: 100%;
+            min-width: 100%;
+            min-height: 100%;
+            @media(max-width: $md3+px){
+                width: 80%;
+                height: 80%;
+                min-width: 80%;
+                min-height: 80%;
+            }
         }
     }
 
