--- a/styles/scss/footer.scss
+++ b/styles/scss/footer.scss
@@ -55,14 +55,52 @@
         justify-content: flex-end;
         align-items: center;
         min-width: 240px;
+
+        @media(any-hover:hover){ 
+            &:hover{
+                .footer__mail--img{
+                    svg{
+                        path{
+                            fill: $yellowColor;
+                        }
+                    }
+                }
+
+                .footer__mail--link{
+                    color: $yellowColor;
+                }
+            }
+        }
     }
 
     &__mail{
         transform: translateY(80px);
         opacity: 0;
+
+        transition: 1s ease;
+
+        @media(max-width: $md2+px){
+            transition: 1s ease;
+        }
+
+        &.active{
+            transform: translateY(0px);
+            opacity: 1;
+        }
         &--img{
-            display: flex;
+            display:inline-flex;
+            justify-content: center;
+            width: 70px;
+            height: 90px;
             margin: 0px 0px 20px 0px;
+
+            svg{
+                width: 100%;
+                height: 100%;
+                path{
+                    transition: .5s ease .1s;
+                }
+            }
         }
 
         &--text{
@@ -80,7 +118,7 @@
             @include adaptiv-value('font-size',28,14,1);
             line-height: 34px;
             text-align: center;
-
+            transition: .2s ease;
             color: #444444;
         }
     }
@@ -88,11 +126,35 @@
     &__telephone{
         transform: translateY(-80px);
         opacity: 0;
+
+        transition: 1s ease .3s;
+
+        @media(max-width: $md2+px){
+            transform: translateY(80px);
+            transition: 1s ease;
+        }
+
+        &.active{
+            transform: translateY(0px);
+            opacity: 1;
+        }
     }
 
     &__skype{
         transform: translateY(80px);
         opacity: 0;
+
+        transition: 1s ease .6s;
+
+        @media(max-width: $md2+px){
+            transition: 1s ease;
+        }
+
+        &.active{
+            transform: translateY(0px);
+            opacity: 1;
+        }
+
     }
 
     &__links{
@@ -108,6 +170,28 @@
             top: -3px;
             left: 0;
             z-index: 1;
+        }
+
+        &.active{
+            .footer__links--item--instagram{
+                transform: translateY(0);
+                opacity: 1;
+            }
+
+            .footer__links--item--facebook{
+                transform: translateY(0);
+                opacity: 1;
+            }
+
+            .footer__links--item--telegram{
+                transform: translateY(-100%);
+                opacity: 1;
+            }
+
+            .footer__links--item--facebook2{
+                transform: translateY(0);
+                opacity: 1;
+            }
         }
 
         @media(max-width: $md2+px){
@@ -126,7 +210,6 @@
             @include adaptiv-value('height',60,40,1);
             border: 3px solid #CCCCCC;
             margin: -3px -1px 0px -2px;
-            transition: .5s ease;
             z-index: 10;
 
             @media(any-hover:hover){ 
@@ -137,35 +220,32 @@
             }
 
             &--instagram{
-                @media(min-width: $md2+px){
-                    transform: translateY(50px);
-                    opacity: 0;
-                }
+                transform: translateY(50px);
+                opacity: 0;
+
+                transition: opacity 1s ease, transform .6s ease, border-color .2s ease;
             }
 
             &--facebook{
-                @media(min-width: $md2+px){
-                    transform: translateY(50px);
-                    opacity: 0;
-                }
+                transform: translateY(50px);
+                opacity: 0;
+                transition: opacity 1s ease .2s, transform .6s ease .2s, border-color .2s ease;
             }
 
             &--facebook2{
-                @media(min-width: $md2+px){
-                    transform: translateY(50px);
-                    opacity: 0;
-                }
+                transform: translateY(50px);
+                opacity: 0;
+                transition: opacity 1s ease .6s, transform .6s ease .6s, border-color .2s ease;
+
             }
 
             &--transform{
                 border: 3px solid #CCCCCC;
-                transform: translateY(-100%);
-                opacity: 1;
-                @media(min-width: $md2+px){
-                    transform: translateY(-130%);
-                    opacity: 0;
-                }
-                margin: 0px -1px -3px -2px;;
+                transform: translateY(-170%);
+                transition: opacity 1s ease .4s, transform .6s ease .4s, border-color .2s ease;
+                opacity: 0;
+
+                margin: 0px -1px -3px -2px;
             }
 
             &--img{
@@ -175,11 +255,12 @@
                 width: 50%;
                 height: 50%;
 
-                img{
+                svg{
                     width: 100%;
                     height: 100%;
-                    object-fit: contain;
-                    object-position: center;
+                    path{
+                        transition: .2s ease;
+                    }
                 }
 
             }
@@ -201,11 +282,35 @@
     }
 
     &__copyright{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         font-size: 20px;
         color: #444444;
         text-align: center;
         p{
-            margin: 0;
+            margin: 0px 0px 20px 0px;
+        }
+
+        img{
+            max-width: 8%;
+            min-width: 8%;
+            opacity: 50%;
+
+            @media(max-width: $md2+px){
+                max-width: 15%;
+                min-width: 15%;
+            }
+
+            @media(max-width: $mp1+px){
+                max-width: 19%;
+                min-width: 19%;
+            }
+
+            @media(max-width: $md4+px){
+                max-width: 30%;
+                min-width: 30%;
+            }
         }
     }
 }
