--- a/styles/scss/header.scss
+++ b/styles/scss/header.scss
@@ -10,11 +10,12 @@
         justify-content: space-between;
         @include adaptiv-value('padding-top',48,20,1);
         @include adaptiv-value('padding-bottom',48,20,1);
-        padding-left: 3px;
-        padding-right: 16px;
+        padding-left: 18px;
+        padding-right: 31px;
         pointer-events: none;
+        min-height: 60px;
         @media(min-width: $md2+px){
-            padding: 48px 0px;
+            padding: 48px 30px;
         }
     }
 
@@ -25,12 +26,19 @@
             background-image: none!important;
         }
         @media(min-width: $md2+px){
-            flex: 0 1 113px / 1130px * 100%;
-            padding: 0px 0px 77px / 1130px * 100% 0px;
+            flex: 0 1 113px / 1920px * 100%;
         }
         img{
-            width: 90%;
-            height: 90%;
+            width: 100%;
+            height: 100%;
+            min-width: 100%;
+            min-height: 100%;
+            @media(max-width: $md3+px){
+                width: 80%;
+                height: 80%;
+                min-width: 80%;
+                min-height: 80%;
+            }
         }
     }
 
@@ -44,13 +52,13 @@
 
         &.active{
             .header__burger--name{
-                color: #fff;
+                color: #fff!important;
             }
 
             .header__burger--body{
                 gap: 0px;
                 span{
-                    background-color: #fff;
+                    background-color: #fff!important;
                     &:nth-child(1){
                         position: absolute;
                         top: 0;
@@ -75,10 +83,6 @@
                         transform: rotate(-45deg);
                     }
                 }
-            }
-
-            .header__burger--btn{
-                gap: 15px;
             }
 
             @media(min-width: $md4+px){
@@ -111,7 +115,6 @@
         &--btn{
             display: flex;
             align-items: center;
-            @include adaptiv-value('gap',15,10,1);
             z-index: 100;
             transition: .3s ease;
             margin: 8px 10px 0px 0px;
@@ -132,8 +135,8 @@
         }
         &--name{
             font-size: 20px;
-            color: #000000;
-            margin: -5px 0px 0px 0px;
+            color: #fff;
+            margin: -5px 12px 0px 0px;
             transition: .3s ease;
         }
 
@@ -143,12 +146,14 @@
             align-items: center;
             justify-content: center;
             flex-direction: column;
-            gap: 3px;
             transition: .3s ease;
             span{
                 width: 15px;
                 height: 3px;
-                background-color: #000000;
+                background-color: #fff;
+                &:not(:last-child){
+                    margin:0px 0px 3px 0px;
+                }
                 &:nth-child(1){
                     transition: .3s ease;
                 }
@@ -187,6 +192,7 @@
                 width: 100vw;
                 height: 100vh;
                 transform: translateX(100%);
+                transition: .3s ease;
             }
 
             &--inner{
